--- a/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -134,6 +134,25 @@
 					"authSelections": "identityPoolAndUserPool"
 				}
 			}
+		},
+		"apisnowflake": {
+			"Type": "AWS::CloudFormation::Stack",
+			"Properties": {
+				"TemplateURL": "https://s3.amazonaws.com/nowflake-20180909151906-deployment/amplify-cfn-templates/api/cloudformation-template.json",
+				"Parameters": {
+					"AppSyncApiName": "snowflake",
+					"AuthCognitoUserPoolId": {
+						"Fn::GetAtt": [
+							"authcognito206baa8a",
+							"Outputs.UserPoolId"
+						]
+					},
+					"schemaGraphql": "s3://nowflake-20180909151906-deployment/amplify-appsync-files/schema.graphql.1536761525464",
+					"ResolverBucket": "nowflake-20180909151906-deployment",
+					"ResolverRootKey": "amplify-appsync-files",
+					"DeploymentTimestamp": "1536761525464"
+				}
+			}
 		}
 	},
 	"Outputs": {
